* Updated .gitignore

* Made the project open-source

* MC Server stats should be using the animated emojis

* The link to the source will be shown when you tagged the bot

* Fixed 'findEmoji' function

* Added server IP field to server status

* Cleaned info command and added source link to info command

12/19/2019 (UTC+7)