@@ -1,0 +1,7 @@
+exports.name = '';
+exports.aliases = ['', ''];
+exports.description = '';
+exports.disabled = false;
+exports.execute = async function (message, args) {
+
+};
